src/test/deca/context/invalid/resultats/test7_op_comp2-cont.res
./src/test/deca/context/invalid/test7_op_comp2.deca:18:1: The types are incompatible for a Comparaison Operation
